<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/htab_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradient"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_collapseMode="parallax">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfileAvatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/margin_large"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:id="@+id/llfollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="180dp"
                android:layout_marginStart="70dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/civProfileAvatar"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_xxx_large"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/tvFollowers"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_xx_large"
                    android:fontFamily="@font/noto_sans"/>

                <TextView
                    android:text="@string/followers"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/noto_sans"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="70dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/civProfileAvatar"
                android:orientation="vertical"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="@dimen/margin_x_large">

                <TextView
                    android:id="@+id/tvFollowing"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_xx_large"
                    android:fontFamily="@font/noto_sans"/>

                <TextView
                    android:text="@string/following"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/noto_sans"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llgitrepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="20sp"
                android:layout_marginStart="70dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="@id/civProfileAvatar"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_xxx_large"
                android:layout_marginLeft="70dp">

                <TextView
                    android:id="@+id/tvNumberOfRepos"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_xx_large"
                    android:fontFamily="@font/noto_sans"/>

                <TextView
                    android:text="@string/repos"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/noto_sans"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/civProfileAvatar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:textSize="@dimen/text_x_large"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:fontFamily="@font/noto_sans"/>

            <ImageView
                android:id="@+id/ivLocation"
                app:layout_constraintTop_toTopOf="@id/tvLocation"
                app:layout_constraintBottom_toBottomOf="@id/tvLocation"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tvUserName"
                android:src="@drawable/location"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />


            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="250sp"
                android:textSize="@dimen/text_small"
                android:textColor="@android:color/white"
                android:fontFamily="@font/noto_sans"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvUserName"
                app:layout_constraintStart_toEndOf="@id/ivLocation"
                android:layout_marginLeft="@dimen/margin_small" />

            <ImageView
                android:id="@+id/company"
                app:layout_constraintTop_toBottomOf="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tvUserName"
                android:src="@drawable/file"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />


            <TextView
                android:id="@+id/name_company"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@id/company"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.tabs.TabLayout
            android:id = "@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@android:color/white"
            android:layout_gravity="bottom"
            app:tabIndicatorFullWidth="false"
            android:minHeight="?actionBarSize"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabIndicatorColor = "@color/colorEnable"
            app:tabRippleColor = "@null"
            app:tabSelectedTextColor = "@color/colorEnable"
            app:tabTextAppearance = "@style/customTabText"
            app:tabTextColor = "@color/colorDisable" >



        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
